@@ -1,6 +1,9 @@
 Changelog
 
-$Id: Changes,v 1.90 2011-04-09 15:54:19 oops Exp $
+$Id: Changes,v 1.91 2011-04-12 17:08:46 oops Exp $
+
+* Wed, Apr 13 2011
+	- add olibc m4 script
 
 * Sun, Apr 10 2011
 	- chaned build environment with automake
